--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div class="header">
         <video autoplay muted loop poster="video-poster.jpg">
-            <source src="assets/video (1080p).mp4" type="video/mp4">
+            <source src="video (1080p).mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <!--Content before waves-->
