--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vs1</title>
+    <title>vs3</title>
     <link rel="stylesheet" href="style.css">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
 
     <div class="header">
         <video autoplay muted loop poster="video-poster.jpg">
-            <source src="assets/video (1080p).mp4" type="video/mp4">
+            <source src="video (1080p).mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <!--Content before waves-->
