--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RAINBOW</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -71,6 +71,54 @@
 </div>
 
 </section>
+<br>
+<div class="container1">
+  <div class="box1 red">
+      <h1>Quality Education</h1>
+      <p>We provide high quality education with quality contents and quality classes our classrooms are also very high quality</p>
+      <i class="fas fa-circle"><img src="scholarship.png" height="50px"></i>
+  </div>
+  <div class="box1 orange">
+      <h1>Highest Mark Assured</h1>
+      <p>Dont worry with our powerfull teaching methods we assure that your child will always be the top in studyies</p>
+      <i class="fas fa-circle"><img src="anniversary_6198562.png" height="50px"></i>
+  </div>
+  <div class="box1 green">
+      <h1>Supportive Teachers</h1>
+      <p>Our teachers are very friendly and suppotive so that the student feels like a friend taking the class and understands everything</p>
+      <i class="fas fa-circle"><img src="education.png" height="50px"> </i>
+  </div>
+</div>
 <br><br><br>
+<section class="container mt-5">
+  <div class="row">
+      <div class="col-md-6">
+          <img src="abt img.jpeg" alt="Company Image" class="img-fluid mx--5"> <!-- Added mx-3 for horizontal margin -->
+      </div>
+      <div class="col-md-6">
+          <h1>
+       
+            
+            About Us</h1>
+          <p>
+            Welcome to Rainbow Tuition Center, your trusted partner in academic excellence. We are a leading institution dedicated to nurturing young minds and helping students achieve their educational goals. With a strong focus on quality education, we cater to a diverse range of students, including those in Std 8, 9, 10, +1, +2, as well as B.Com and B.A students.
+          </p>
+          <a href="#" class="btn btn-primary">Learn More</a>
+      </div>
+  </div>
+</section>
+<br><br><br><br><div class="container">
+  <div class="row">
+      <div class="col-sm-4">
+          <img src="afterabt (1).jpeg" alt="Image 1" class="img-fluid">
+      </div>
+      <div class="col-sm-4">
+          <img src="afterabt (2).jpeg" alt="Image 2" class="img-fluid">
+      </div>
+      <div class="col-sm-4">
+          <img src="afterabt (3).jpeg" alt="Image 3" class="img-fluid" height="200px">
+      </div>
+  </div>
+</div>
 </body>
 </html>
