--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <p>
             Welcome to Rainbow Tuition Center, your trusted partner in academic excellence. We are a leading institution dedicated to nurturing young minds and helping students achieve their educational goals. With a strong focus on quality education, we cater to a diverse range of students, including those in Std 8, 9, 10, +1, +2, as well as B.Com and B.A students.
           </p>
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <a href="abt.html" class="btn btn-primary">Learn More</a>
       </div>
   </div>
 </section>
