--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <p>
             Welcome to Rainbow Tuition Center, your trusted partner in academic excellence. We are a leading institution dedicated to nurturing young minds and helping students achieve their educational goals. With a strong focus on quality education, we cater to a diverse range of students, including those in Std 8, 9, 10, +1, +2, as well as B.Com and B.A students.
           </p>
-          <a href="abt.html" class="btn btn-primary">Learn More</a>
+          <a href="#" class="btn btn-primary">Learn More</a>
       </div>
   </div>
 </section>
@@ -178,10 +178,10 @@
   </div>
 </div>
 
-<div class="unique-container" style="background-color: #ffffff;">
+<div class="unique-container" style="background-color: #ecffa1;">
     <div class="unique-left">
   
-         <img src="https://images.pexels.com/photos/8364026/pexels-photo-8364026.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" height="400px">
+         <img src="https://images.pexels.com/photos/5212335/pexels-photo-5212335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" height="400px" width="300px">
         
     </div>
     <div class="unique-right">
