--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
            <h1>Raibow Edu Park</h1>
            <p style="text-align:center;">
             Rainbow Tuition Center, nestled in the vibrant locales of Iringannur and Peringathur, is a beacon of educational excellence. Our dedicated team of educators fosters a nurturing environment where students thrive academically. With a rainbow of subjects and personalized guidance, we illuminate the path to success for our students.</p>
-            <a href="" class="btn-header">Visit us to know more</a>
+            <a href="abt.html" class="btn-header">Visit us to know more</a>
 </div>
 
 </section>
 <div class="marquee-container">
   <div class="marquee-content">
-      This is a responsive marquee with a red background color. It will scroll from right to left.
+     Rainbow..........
   </div>
 </div>
 <br>
@@ -111,7 +111,7 @@
           <p>
             Welcome to Rainbow Tuition Center, your trusted partner in academic excellence. We are a leading institution dedicated to nurturing young minds and helping students achieve their educational goals. With a strong focus on quality education, we cater to a diverse range of students, including those in Std 8, 9, 10, +1, +2, as well as B.Com and B.A students.
           </p>
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <a href="abt.html" class="btn btn-primary">Learn More</a>
       </div>
   </div>
 </section>
