--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PIXELOUTFITTER</title>
     <link rel="stylesheet" href="style.css">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -216,7 +216,7 @@
 <section class="hero-section" style="background-color: white;">
       
           <div class="card-grid">
-            <a class="card" href="#">
+            <a class="card" href="web.html">
               <div class="card__background" style="background-image: url(https://images.pexels.com/photos/6476595/pexels-photo-6476595.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)"></div>
               <div class="card__content">
                 <p class="card__category"></p>
@@ -265,13 +265,7 @@
               </div>
               <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
                   <div class="footer-menu">
-                      <ul>
-                          <li><a href="">Home</a></li>
-                          <li><a href="#">Terms</a></li>
-                          <li><a href="#">Privacy</a></li>
-                          <li><a href="#">Policy</a></li>
-                          <li><a href="#">Contact</a></li>
-                      </ul>
+                   
                   </div>
               </div>
           </div>
