--- a/facility.html
+++ b/facility.html
@@ -84,7 +84,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/5905557/pexels-photo-5905557.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="1 (1).jpeg" class="img-fluid" alt="Your Image">
         </div>
         <div class="col-md-6">
             <h2>Perfect Discipline:</h2>
@@ -97,7 +97,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/5212336/pexels-photo-5212336.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="1 (2).jpeg" class="img-fluid" alt="Your Image">
         </div>
         <div class="col-md-6">
             <h2>Expert and Experienced Teachers:</h2>
@@ -111,7 +111,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/4145354/pexels-photo-4145354.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="1 (3).jpeg" class="img-fluid" alt="Your Image">
         </div>
         <div class="col-md-6">
             <h2>Wi-Fi Classrooms:</h2>
@@ -126,7 +126,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/5211446/pexels-photo-5211446.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="1468f371-d37d-40cc-acf8-e649ea3d434b-removebg-preview.png" class="img-fluid" alt="Your Image">
         </div>
         <div class="col-md-6">
             <h2>Air-Conditioned Classrooms:</h2>
@@ -157,7 +157,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/157534/pexels-photo-157534.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="2 (2).jpeg" class="img-fluid" alt="Your Image">
         </div>
         <div class="col-md-6">
             <h2>Sound System:</h2>
@@ -172,7 +172,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/15141529/pexels-photo-15141529/free-photo-of-man-speaking-about-ideas-in-meeting.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="2 (3).jpeg" class="img-fluid" alt="Your Image">
         </div>
         <div class="col-md-6">
             <h2>Educational Trips:</h2>
@@ -188,7 +188,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/4048182/pexels-photo-4048182.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="abt img.jpeg" class="img-fluid" alt="Your Image">
         </div>
         <div class="col-md-6">
             <h2>Motivation Classes:</h2>
@@ -203,7 +203,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/3808060/pexels-photo-3808060.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="afterabt (2).jpeg" class="img-fluid" alt="Your Image" style="height:400px;">
         </div>
         <div class="col-md-6">
             <h2>Series Examinations:</h2>
@@ -218,7 +218,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://images.pexels.com/photos/10646410/pexels-photo-10646410.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid" alt="Your Image">
+            <img src="afterabt (3).jpeg" class="img-fluid" alt="Your Image" style="height:400px;">
         </div>
         <div class="col-md-6">
             <h2>Pre-Model & Model Examinations:</h2>
