--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Responsive Image Slider</title>
+  <title>STELLXR</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam:wght@700&family=PT+Serif:ital@1&family=Press+Start+2P&family=Schoolbell&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar123">
         <div class="container132">
-          <a href="#" class="logo">Your Logo</a>
+          <a href="#" class="logo">STELLXR</a>
           <div class="nav-links">
             <ul>
               <li><a href="#">Home</a></li>
